--- a/service-order-consumer/src/main/resources/application.properties
+++ b/service-order-consumer/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8081
 spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.loja.producer.dto.PedCompDto
