atualizando version e impl config kafka

--- a/service-order-consumer/src/main/resources/application.properties
+++ b/service-order-consumer/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port=8081
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.properties.spring.json.trusted.packages=br.com.loja.producer.dto.PedCompDto
+spring.kafka.properties.reconnect.backoff.max.ms=10000
+spring.kafka.properties.reconnect.backoff.ms=5000
+spring.kafka.consumer.session.timeout.ms=6000
+spring.kafka.consumer.request.timeout.ms=8000
+spring.kafka.consumer.properties.max.poll.interval.ms=60000
+spring.kafka.consumer.properties.max.poll.records=500
